# elschooltgbot

./: .gitignore  pyproject.toml  server.txt
db/: add_register_data.py  create.py
src/: bot.ini
src/tgbot/: __main__.py  config.py  main.py
src/tgbot/filters/: Command.py  command.py  role.py  user.py
src/tgbot/handlers/: __init__.py  admin.py  errors.py  grades.py  user.py  utils.py
src/tgbot/handlers/user/: __init__.py  commands.py  functions.py  keyboard.py
src/tgbot/keyboards/: user.py
src/tgbot/middlewares/: data.py  grades.py  role.py
src/tgbot/models/: cls.py  user.py
src/tgbot/services/: grades_fixer.py  repository.py
src/tgbot/states/: user.py
tests/: test_command_filter.py  test_diaries.py  test_register.py
