[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "elschool_bot"
version = "2.5.19"
authors = [
    { name = "Maxim", email = "maxim@filjus.ru" },
]
description = "бот telegram, которыый получает и брабатывает оценки из электорнного журнала https://elschool.ru"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiogram==3.0b6",
    "aiohttp~=3.8.3",
    "beautifulsoup4~=4.11.1"
]
[project.optional-dependencies]
test = [
    "pytest"
]
lint = [
    "flake8"
]

[project.scripts]
tgbot = "tgbot.main:main"